--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 <html>
-this is my website
+  <body>
+    <center>
+    <h1> aahana's website </h1>
+    
+    <img src="https://static.vecteezy.com/system/resources/previews/047/450/823/non_2x/beautiful-flower-concept-colored-flat-illustration-isolated-vector.jpg">
+  </body>
+  
+  <style>
+  <head> <link rel="stylesheet" href="style.css">
+<link rel="icon" type="image/x-icon" href="link to image">
+<title> TAB TITLE </title>
+  </head>
+  </style>
 
 
 
