--- a/index.html
+++ b/index.html
@@ -11,9 +11,21 @@
 <link rel="icon" type="image/x-icon" href="link to image">
 <title> TAB TITLE </title>
   </head>
+
+  h1 {
+  color: purple;
+  text-decoration: purple dotted underline;
+  letter-spacing: -2px;
+  word-pacing: 15px;
+  line-height:3px;
+  font-size: 40px;
+}
+
+body {
+  background-color: pink;
+}
+
   </style>
-
-
 
 
 
