--- a/index.html
+++ b/index.html
@@ -1,33 +1,32 @@
 <html>
+  <head> <link rel="stylesheet" href="style.css">
+<link rel="icon" type="image/x-icon" href="link to image">
+<title> TAB TITLE </title>
+  </head>
   <body>
+    <nav>
+  <li><a href=""> Home </a></li>
+  <li><a href=""> Do App </a></li>
+  <li><a href=""> Digital Design </a></li>
+</nav>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <center>
     <h1> aahana's website </h1>
+      <br>
+      <br>
+      <br>
     
     <img src="https://static.vecteezy.com/system/resources/previews/047/450/823/non_2x/beautiful-flower-concept-colored-flat-illustration-isolated-vector.jpg">
   </body>
+</html>
   
   <style>
   <head> <link rel="stylesheet" href="style.css">
 <link rel="icon" type="image/x-icon" href="link to image">
 <title> TAB TITLE </title>
   </head>
-
-  h1 {
-  color: purple;
-  text-decoration: purple dotted underline;
-  letter-spacing: -2px;
-  word-pacing: 15px;
-  line-height:3px;
-  font-size: 40px;
-}
-
-body {
-  background-color: pink;
-}
-
   </style>
-
-
-
-
-</html>
