--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   </head>
   <body>
     <nav>
-  <li><a href=""> Home </a></li>
-  <li><a href=""> Do App </a></li>
-  <li><a href=""> Digital Design </a></li>
+  <li><a href="index.html"> Home </a></li>
+  <li><a href="dogApp.html"> Dog App </a></li>
+  <li><a href="digitalDesign.html"> Digital Design </a></li>
 </nav>
     <br>
     <br>
