--- a/dogApp.html
+++ b/dogApp.html
@@ -1,1 +1,22 @@
-
+<html>
+  <head> <link rel="stylesheet" href="style.css">
+<link rel="icon" type="image/x-icon" href="link to image">
+<title> TAB TITLE </title>
+  </head>
+  <body>
+    <nav>
+  <li><a href="index.html"> Home </a></li>
+  <li><a href="dogApp.html"> Dog App </a></li>
+  <li><a href="digitalDesign.html"> Digital Design </a></li>
+</nav>
+    <br>
+    <br>
+    <br>
+    <br>
+    <center>
+    <h1> Dog App </h1>
+      <br>
+      <br>
+      <br>
+    <center>
+  <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/ZemL_YLFkb8APnO22RhY74QnKb5vga48aocpRJsASS9/embed?nosource"></iframe> 
