--- a/dogApp.html
+++ b/dogApp.html
@@ -20,3 +20,4 @@
       <br>
     <center>
   <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/ZemL_YLFkb8APnO22RhY74QnKb5vga48aocpRJsASS9/embed?nosource"></iframe> 
+</html> 
