--- a/digitalDesign.html
+++ b/digitalDesign.html
@@ -1,1 +1,24 @@
+<html>
+  <head> <link rel="stylesheet" href="style.css">
+<link rel="icon" type="image/x-icon" href="link to image">
+<title> TAB TITLE </title>
+  </head>
+  <body>
+    <nav>
+  <li><a href="index.html"> Home </a></li>
+  <li><a href="dogApp.html"> Dog App </a></li>
+  <li><a href="digitalDesign.html"> Digital Design </a></li>
+</nav>
+    <br>
+    <br>
+    <br>
+    <br>
+    <center>
+    <h1> Digital Design </h1>
+      <br>
+      <br>
+      <br>
+    <center>
+ <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/y8nMhzWO3UaVqACi1aQ_L5834gOUmp3miO8BCuMFhwx/embed?nosource"></iframe>
+</html> 
 
