--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <br>
     <br>
     <center>
-    <h1> aahana's website </h1>
+    <h1> Aahana's Website </h1>
       <br>
       <br>
       <br>
